html to markdown

--- a/_posts/2009-05-08-loch-ness.md
+++ b/_posts/2009-05-08-loch-ness.md
@@ -59,7 +59,7 @@ Après une courte nuit, étant donné qu'il faut rendre les chambres avant 10h, 
 
 [caption id="attachment_98" align="alignnone" width="300"]<img class="size-medium wp-image-98" title="03052009308" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/05/03052009308-300x225.jpg" alt="Vue du château depuis le parking" width="300" height="225" /> Vue du château depuis le parking[/caption]
 
-Nous avons même eu droit à un soleil continu durant la visite des ruines. La vue sur le loch est magnifique. Ce château a été détruit durant la guerre des clans. Après cette petite visite et une courte pause à la boutique de souvenirs, nous repartons en direction d'Inverness. Mais avant la destination finale, il est temps de faire le premier plein de la voiture, et ensuite de visiter le <em>Loch Ness Visitor Center</em>. Dans ce musée, il y a toutes sortes de témoignages et de photos de Nessie. Et aussi d'où proviens cette légende.
+Nous avons même eu droit à un soleil continu durant la visite des ruines. La vue sur le loch est magnifique. Ce château a été détruit durant la guerre des clans. Après cette petite visite et une courte pause à la boutique de souvenirs, nous repartons en direction d'Inverness. Mais avant la destination finale, il est temps de faire le premier plein de la voiture, et ensuite de visiter le `Loch Ness Visitor Center`. Dans ce musée, il y a toutes sortes de témoignages et de photos de Nessie. Et aussi d'où proviens cette légende.
 
 Aller une autre photo de Nessie pour la route.
 
