--- a/_posts/2009-03-26-barbecue.md
+++ b/_posts/2009-03-26-barbecue.md
@@ -22,11 +22,11 @@ Bonjour,
 
 Quelques nouvelles d'Ecosse. Le semaine dernière, nous avons eu beau temps tout le temps, donc un barbecue a été organisé. Juste devant la résidence, tout le monde était en short T-shirt c'est pour dire. Avec comme grillades, saucisses et steacks. Et bien sûr de la bière pour se désaltérer.
 
-[caption id="attachment_82" align="alignnone" width="300" caption="Un pote français"]<img class="size-medium wp-image-82" title="Renaud" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/03/20032009121-300x225.jpg" alt="Un pote français" width="300" height="225" />[/caption]
+<img class="size-medium wp-image-82" title="Renaud" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/03/20032009121-300x225.jpg" alt="Un pote français" width="300" height="225" />
 
 L'ambiance était très sympa. Nous avons été rejoint par un espagnol et un écossais. Beaucoup de rigolage, certains ont fait un petit foot pour digérer.
 
-[caption id="attachment_83" align="alignnone" width="225" caption="Barbecue acheté £5 au supermarché"]<img class="size-medium wp-image-83" title="Le barbecue" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/03/20032009122-225x300.jpg" alt="Barbecue acheté £5 au supermarché" width="225" height="300" />[/caption]
+<img class="size-medium wp-image-83" title="Le barbecue" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/03/20032009122-225x300.jpg" alt="Barbecue acheté £5 au supermarché" width="225" height="300" />
 
 On à même sorti les fauteuils de la salle commune pour faire une petite sieste au Soleil. Le soir on a enchaîné sur les 22 ans de deux potes français. Avec un super gâteau fait maison par un des invité. Et pour finir, il y avait l'Irish International Party à l'Union.
 
