--- a/_posts/2009-05-08-loch-ness.md
+++ b/_posts/2009-05-08-loch-ness.md
@@ -27,24 +27,24 @@ Bonjour,
 
 N'ayant pas trop de temps cette semaine pour raconter mon voyage au Loch Ness et à l'île de Skye, le récit de mes aventures arrive seulement aujourd'hui. Asseyez vous confortablement, car il y a beaucoup de choses à découvrir.
 
-<strong>Préparation</strong>
+**Préparation**
 Pour commencer, c'est un ami, Tom, qui a eu l'idée d'organiser un petit voyage au Loch Ness, et ensuite à l'île de Skye. Au début nous devions partir à 25 pour le Loch Ness, mais la semaine dernière au moment de fignoler les détails, la plupart ne sont pas venus, étant donné qu'il y à la semaine de examens qui approche. Donc nous nous retrouvons à 10 pour le Loch Ness, et plus que 3 pour l'île de Skye, les deux jours suivants.
 
-<strong>Départ</strong>
+**Départ**
 Ca y est, c'est le grand jour, nous allons enfin partir !!! Premier petit problème, nous avions oubliés de réservés une des 2 voitures, donc il a fallu tourner dans Glasgow pour trouver une agence avec une voiture disponnible. Après les derniers préparatifs, nous partons vers midi dans deux voitures. Une de 7 places pour le groupe qui rentre directement après le Loch Ness, et une de 3 pour ceux qui continuent sur l'île de Skye.
 
 Grand ciel bleu quand nous quittons Paisley, Sur le chemin, nous avons eu un temps typique d'Ecosse, c'est à dire une alternance entre 5 minutes de pluie et 5 minutes de soleil. Tout au long du voyage, nous faisons plusieurs pauses pour admirer le paysage, qui, soit dit en passant, est magnifique. Nous avons longé le Loch Lomond pendant une bonne partie du trajet, pour arriver dans un décors de montagnes sans aucuns arbres. Nous étions comme un grain de poussière sur un terrain de rugby, minuscules, insignifiants.
 
-<img class="size-medium wp-image-95" title="02052009299" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/05/02052009299-300x225.jpg" alt="Montagnes entourant notre route pour le Loch Ness" width="300" height="225" /> Montagnes entourant notre route pour le Loch Ness
+![Montagnes entourant notre route pour le Loch Ness](http://luxifer.fr/wordpress/wp-content/uploads/2009/05/02052009299-300x225.jpg "02052009299") Montagnes entourant notre route pour le Loch Ness
 
 Après plusieurs autres pauses, Nous arrivons enfin à Fort Augustus, la ville qui est au sud du Loch Ness. Il est 16h30, il est temps de trouver ou se situe notre hôtel. Après plusieurs appels, nous arrivons enfin à voir une destination, donc direction l'hôtel pour poser les affaires et ensuite profiter un peu de la ville.
 
-<strong>Premier jour au Loch Ness</strong>
+**Premier jour au Loch Ness**
 Nous arrivons donc à un hôtel tout neuf, il y a déjà quelques motards et quelques marcheurs qui dorment ici. L'intérieur de l'hôtel est tout neuf, les chambres sont pour deux personnes. Avec deux lits en 90cm dans chacune d'elle. La cuisine est très grande et très bien équipée, tout ce qui est dans les frigos et dans les placards est à disposition des occupants. Le tout pour £15 la nuit.
 
 Une fois les affaires posées, nous retournons en ville, afin de faire les courses du soir, et de profiter du Loch Ness.
 
-<img class="size-full wp-image-96" title="loch-ness-02052009" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/05/loch-ness-02052009.jpg" alt="Photos du groupe prise par une touriste française rencontrée sur place." width="362" height="272" /> Photos du groupe prise par une touriste française rencontrée sur place.
+![Photos du groupe prise par une touriste française rencontrée sur place.](http://luxifer.fr/wordpress/wp-content/uploads/2009/05/loch-ness-02052009.jpg "loch-ness-02052009") Photos du groupe prise par une touriste française rencontrée sur place.
 
 Cette photo a même été tirée spécialement pour tous les participants du voyage. Sur la photo on peut voir sur la rangée du haut, de gauche à droite : Lucie, Kateřina, Rémy, Moi et Tom. Sur la deuxième rangée : Markus, Lenka, Aneta, Abraham et Kévin. Nous étions quatre tchèques, un allemand et cinq français.
 
@@ -52,28 +52,28 @@ Après cette petite balade au bord du lac, il est grand temps de se restaurer. S
 
 Comme je l'avais promis à Odin, voici une photo de Nessie.
 
-<img class="size-medium wp-image-97" title="02052009304" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/05/02052009304-225x300.jpg" alt="Nessie à Fort Augustus" width="225" height="300" /> Nessie à Fort Augustus
+![Nessie à Fort Augustus](http://luxifer.fr/wordpress/wp-content/uploads/2009/05/02052009304-225x300.jpg "02052009304") Nessie à Fort Augustus
 
-<strong>Deuxième jour au Loch Ness</strong>
+**Deuxième jour au Loch Ness**
 Après une courte nuit, étant donné qu'il faut rendre les chambres avant 10h, la journée commence avec un cap sur Inverness, au nord du Loch Ness. Sur la route nous faisons aussi plusieurs escales, notament la première qui est un château un ruine au bord du loch. La petite anecdote de cette visite c'est que nous sommes passés par l'entrée de secours.
 
-<img class="size-medium wp-image-98" title="03052009308" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/05/03052009308-300x225.jpg" alt="Vue du château depuis le parking" width="300" height="225" /> Vue du château depuis le parking
+![Vue du château depuis le parking](http://luxifer.fr/wordpress/wp-content/uploads/2009/05/03052009308-300x225.jpg "03052009308") Vue du château depuis le parking
 
 Nous avons même eu droit à un soleil continu durant la visite des ruines. La vue sur le loch est magnifique. Ce château a été détruit durant la guerre des clans. Après cette petite visite et une courte pause à la boutique de souvenirs, nous repartons en direction d'Inverness. Mais avant la destination finale, il est temps de faire le premier plein de la voiture, et ensuite de visiter le `Loch Ness Visitor Center`. Dans ce musée, il y a toutes sortes de témoignages et de photos de Nessie. Et aussi d'où proviens cette légende.
 
 Aller une autre photo de Nessie pour la route.
 
-<img class="size-medium wp-image-99" title="03052009317" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/05/03052009317-225x300.jpg" alt="Nessie 0 - 1 Florent" width="225" height="300" /> Nessie 0 - 1 Florent
+![Nessie 0 - 1 Florent](http://luxifer.fr/wordpress/wp-content/uploads/2009/05/03052009317-225x300.jpg "03052009317") Nessie 0 - 1 Florent
 
 Nous reprenons donc la route, pour nous arrêter à Inverness afin de faire les courses de midi et du soir pour ceux qui restent. Nous cherchons ensuite une petite plage au bord du loch pour pique-niquer. Après quelques difficultés, nous trouvons enfin la plage tant convoitée. Malheureusement pour nous, la pluie est aussi au rendez-vous. Mais nous ne sommes pas en sucre et nous mangeons quand même dehors. Par chance, c'était seulement une averse de quelques minutes.
 
-<img class="size-medium wp-image-100" title="03052009319" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/05/03052009319-300x225.jpg" alt="Il faut beau mais on garde quand même la polaire" width="300" height="225" /> Il faut beau mais on garde quand même la polaire
+![Il faut beau mais on garde quand même la polaire](http://luxifer.fr/wordpress/wp-content/uploads/2009/05/03052009319-300x225.jpg "03052009319") Il faut beau mais on garde quand même la polaire
 
 Après ce bon repas, nous repartons vers la côte est de l'Ecosse au nord d'Inverness pour aller visiter un fort. En chemin, Nous arrivons là où a eu lieu le Braveheart. C'est à dire la bataille qui avait opposé les troupes du gouvernement, et un rassemblement de clans nommés jacobains. Dès le premier assaut, en quelques minutes, plus de 700 jacobains ont été tués.
 
 La plaine est gigantesque, et il y a un mémorial à côté. Nous en profitons pour faire la petite balade qui fait le tour du champ de bataille. Voyant que la journée est déjà bien avancée, et que ceux qui repartent ont encore pas mal de route à faire, nous nous dirigeons vers le fort dont j'ai parler tout à l'heure. Malheureusement, nous arrivons trop tard pour la visite. Mais ce n'est pas grave. Nous faisons le tour de fort par les renforts. Jusqu'à arriver sur une plage.
 
-<img class="size-medium wp-image-101" title="03052009320" src="http://luxifer.fr/wordpress/wp-content/uploads/2009/05/03052009320-300x225.jpg" alt="Vue de la plage du Fort George" width="300" height="225" /> Vue de la plage du Fort George
+![Vue de la plage du Fort George](http://luxifer.fr/wordpress/wp-content/uploads/2009/05/03052009320-300x225.jpg "03052009320") Vue de la plage du Fort George
 
 Le sable de cette plage est sensiblement pareil que celui de la plage de Carnac. Quoique un peu plus sombre. C'est donc parti pour une petite marche sur la plage. Par contre il ne fait pas chaud du tout.
 
