--- a/_posts/2009-02-02-la-neige.md
+++ b/_posts/2009-02-02-la-neige.md
@@ -18,7 +18,7 @@ Bonjour,
 
 Il ne m'aura pas fallu attendre pour voir la neige tomber sur Paisley. Heureusement que je n'ai pas cours aujourd'hui car ça tombe fort. Voici une photo pour un petit aperçu. Pour plus de photos il faut consulter ma galerie.
 
-![Vue de ma chambre sous la neige](http://luxifer.fr/wordpress/wp-content/uploads/2009/02/02022009071-225x300.jpg "Paisley sous la neige")
+![Vue de ma chambre sous la neige](/images/02022009071-225x300.jpg "Paisley sous la neige")
 
 C'est la tempête de neige sur tout le Royaume Uni, à Londres il y a à peu près 20 centimètres qui sont tombés. Ici ça ne tient pas bien mais c'est prévu pour durer, donc on peut s'attendre à avoir pas mal de neige demain.
 
