--- a/_posts/2009-03-26-barbecue.md
+++ b/_posts/2009-03-26-barbecue.md
@@ -22,11 +22,11 @@ Bonjour,
 
 Quelques nouvelles d'Ecosse. Le semaine dernière, nous avons eu beau temps tout le temps, donc un barbecue a été organisé. Juste devant la résidence, tout le monde était en short T-shirt c'est pour dire. Avec comme grillades, saucisses et steacks. Et bien sûr de la bière pour se désaltérer.
 
-![Un pote français](http://luxifer.fr/wordpress/wp-content/uploads/2009/03/20032009121-300x225.jpg "Renaud")
+![Un pote français](/images/20032009121-300x225.jpg "Renaud")
 
 L'ambiance était très sympa. Nous avons été rejoint par un espagnol et un écossais. Beaucoup de rigolage, certains ont fait un petit foot pour digérer.
 
-![Barbecue acheté £5 au supermarché](http://luxifer.fr/wordpress/wp-content/uploads/2009/03/20032009122-225x300.jpg "Le barbecue")
+![Barbecue acheté £5 au supermarché](/images/20032009122-225x300.jpg "Le barbecue")
 
 On à même sorti les fauteuils de la salle commune pour faire une petite sieste au Soleil. Le soir on a enchaîné sur les 22 ans de deux potes français. Avec un super gâteau fait maison par un des invité. Et pour finir, il y avait l'Irish International Party à l'Union.
 
