--- a/_posts/2009-03-26-barbecue.md
+++ b/_posts/2009-03-26-barbecue.md
@@ -14,9 +14,8 @@ status: publish
 type: post
 published: true
 meta:
-  _edit_last: '2'
+  thumb: '/images/20032009122-519x140.jpg'
   dsq_thread_id: '646298853'
-  _shorten_url_bitly: http://j.mp/J4AeAo
 ---
 Bonjour,
 
