--- a/_posts/2009-05-08-loch-ness.md
+++ b/_posts/2009-05-08-loch-ness.md
@@ -12,16 +12,8 @@ status: publish
 type: post
 published: true
 meta:
-  _edit_last: '2'
+  thumb: '/images/02052009299-519x140.jpg'
   dsq_thread_id: '523906533'
-  _shorten_url_bitly: http://j.mp/HVfKNM
-  Hide SexyBookmarks: '0'
-  _thumbnail_id: '95'
-  Hide OgTags: '0'
-  image: ''
-  embed: This is the default text
-  seo_follow: 'false'
-  seo_noindex: 'false'
 ---
 Bonjour,
 
