--- a/_posts/2009-05-08-loch-ness.md
+++ b/_posts/2009-05-08-loch-ness.md
@@ -18,11 +18,15 @@ meta:
 Bonjour,
 
 N'ayant pas trop de temps cette semaine pour raconter mon voyage au Loch Ness et à l'île de Skye, le récit de mes aventures arrive seulement aujourd'hui. Asseyez vous confortablement, car il y a beaucoup de choses à découvrir.
+
 <!--break-->
-**Préparation**
+
+### Préparation
+
 Pour commencer, c'est un ami, Tom, qui a eu l'idée d'organiser un petit voyage au Loch Ness, et ensuite à l'île de Skye. Au début nous devions partir à 25 pour le Loch Ness, mais la semaine dernière au moment de fignoler les détails, la plupart ne sont pas venus, étant donné qu'il y à la semaine de examens qui approche. Donc nous nous retrouvons à 10 pour le Loch Ness, et plus que 3 pour l'île de Skye, les deux jours suivants.
 
-**Départ**
+### Départ
+
 Ca y est, c'est le grand jour, nous allons enfin partir !!! Premier petit problème, nous avions oubliés de réservés une des 2 voitures, donc il a fallu tourner dans Glasgow pour trouver une agence avec une voiture disponnible. Après les derniers préparatifs, nous partons vers midi dans deux voitures. Une de 7 places pour le groupe qui rentre directement après le Loch Ness, et une de 3 pour ceux qui continuent sur l'île de Skye.
 
 Grand ciel bleu quand nous quittons Paisley, Sur le chemin, nous avons eu un temps typique d'Ecosse, c'est à dire une alternance entre 5 minutes de pluie et 5 minutes de soleil. Tout au long du voyage, nous faisons plusieurs pauses pour admirer le paysage, qui, soit dit en passant, est magnifique. Nous avons longé le Loch Lomond pendant une bonne partie du trajet, pour arriver dans un décors de montagnes sans aucuns arbres. Nous étions comme un grain de poussière sur un terrain de rugby, minuscules, insignifiants.
@@ -31,7 +35,8 @@ Grand ciel bleu quand nous quittons Paisley, Sur le chemin, nous avons eu un tem
 
 Après plusieurs autres pauses, Nous arrivons enfin à Fort Augustus, la ville qui est au sud du Loch Ness. Il est 16h30, il est temps de trouver ou se situe notre hôtel. Après plusieurs appels, nous arrivons enfin à voir une destination, donc direction l'hôtel pour poser les affaires et ensuite profiter un peu de la ville.
 
-**Premier jour au Loch Ness**
+### Premier jour au Loch Ness
+
 Nous arrivons donc à un hôtel tout neuf, il y a déjà quelques motards et quelques marcheurs qui dorment ici. L'intérieur de l'hôtel est tout neuf, les chambres sont pour deux personnes. Avec deux lits en 90cm dans chacune d'elle. La cuisine est très grande et très bien équipée, tout ce qui est dans les frigos et dans les placards est à disposition des occupants. Le tout pour £15 la nuit.
 
 Une fois les affaires posées, nous retournons en ville, afin de faire les courses du soir, et de profiter du Loch Ness.
@@ -46,7 +51,8 @@ Comme je l'avais promis à Odin, voici une photo de Nessie.
 
 ![Nessie à Fort Augustus](/images/02052009304-225x300.jpg "02052009304") Nessie à Fort Augustus
 
-**Deuxième jour au Loch Ness**
+### Deuxième jour au Loch Ness
+
 Après une courte nuit, étant donné qu'il faut rendre les chambres avant 10h, la journée commence avec un cap sur Inverness, au nord du Loch Ness. Sur la route nous faisons aussi plusieurs escales, notament la première qui est un château un ruine au bord du loch. La petite anecdote de cette visite c'est que nous sommes passés par l'entrée de secours.
 
 ![Vue du château depuis le parking](/images/03052009308-300x225.jpg "03052009308") Vue du château depuis le parking
